--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<nav class="navbar navbar-expand-lg navbar-light">
 						<div class="container">
 							  <a class="navbar-brand" href="index.html">
-							  	<img src="img/logo-bub-resized.png" alt="B.u.B">
+							  	<img src="img/logo-bub.png" alt="B.u.B" width="152px">
 							  </a>
 							  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							    <span class="text-white lnr lnr-menu"></span>
