Some paddings were added

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 							</div>							
 						</div>
 						<div class="col-lg-4 col-md-6 ">
-							<div class="single-feature">
+							<div class="single-feature mb-30">
 								<div class="title d-flex flex-row pb-20">
 									<span class="lnr lnr-license"></span>
 									<h4><a href="#">Technical Skills</a></h4>
@@ -344,7 +344,7 @@
 							</div>							
 						</div>
 						<div class="col-lg-4 col-md-6 ">
-							<div class="single-feature">
+							<div class="single-feature mb-30">
 								<div class="title d-flex flex-row pb-20">
 									<span class="lnr lnr-apartment"></span>
 									<h4><a href="#">Spacious halls</a></h4>
@@ -355,7 +355,7 @@
 							</div>							
 						</div>
 						<div class="col-lg-4 col-md-6">
-							<div class="single-feature">
+							<div class="single-feature mb-30">
 								<div class="title d-flex flex-row pb-20">
 									<span class="lnr lnr-map-marker"></span>
 									<h4><a href="#">Professional Service</a></h4>
