Buy now navigation improved

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 									<li><a href="#faq">Faq</a></li>
 									<li><a href="#contact">Contact</a></li>
 									<!-- Dropdown -->
-								    <li class="dropdown">
-								      <a class="dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-								        Buy now
-								      </a>
-								      <div class="dropdown-menu">
-								        <a class="dropdown-item" href="elements.html">Gym membership cards</a>
-								      </div>
+								    	<li class="dropdown">
+								      	<a class="dropdown-toggle" href="elements.html" id="navbardrop" data-toggle="dropdown">
+								        	Buy now
+								      	</a>
+								      	<div class="dropdown-menu">
+								        	<a class="dropdown-item" href="elements.html">Gym membership cards</a>
+								      	</div>
 								    </li>
 							    </ul>
 							  </div>						
