--- a/elements.html
+++ b/elements.html
@@ -31,7 +31,7 @@
 
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 							<ul class="navbar-nav">
-								<li><a href="elements.html">Home</a></li>								
+								<li><a href="index.html">Home</a></li>								
 								<li><a href="#subscription">Cards info</a></li>
 								<li><a href="#reservation">Reservation</a></li>
 							</ul>
