--- a/elements.html
+++ b/elements.html
@@ -6,13 +6,16 @@
 		<link rel="shortcut icon" href="img/main-logo.ico">
 		<title>B.u.B. Membership</title>
 
-		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">	
-			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/main.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet">
+
+		<link rel="stylesheet" href="css/linearicons.css">
+		<link rel="stylesheet" href="css/owl.carousel.css">
+		<link rel="stylesheet" href="css/font-awesome.min.css">	
+		<link rel="stylesheet" href="css/magnific-popup.css">
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/main.css">
 		</head>
 		
 		<body>
@@ -23,7 +26,7 @@
 				<nav class="navbar navbar-expand-lg  navbar-light">
 					<div class="container">
 						  <a class="navbar-brand" href="index.html">
-							  <img src="img/logo-bub-resized.png" alt="B.u.B">
+							<img src="img/logo-bub.png" alt="B.u.B" width="152px">
 						  </a>
 						  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="text-white lnr lnr-menu"></span>
@@ -31,9 +34,9 @@
 
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 							<ul class="navbar-nav">
-								<li><a href="index.html">Home</a></li>								
-								<li><a href="#subscription">Cards info</a></li>
-								<li><a href="#reservation">Reservation</a></li>
+								<li><a href="index.html">Головна</a></li>								
+								<li><a href="#subscription">Про абонементи</a></li>
+								<li><a href="#reservation">Забронювати</a></li>
 							</ul>
 						  </div>						
 					</div>
@@ -43,10 +46,10 @@
 				<div class="container">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-							<div class="generic-banner-content">
-								<h2 class="text-white">Gym membership</h2>
-								<p class="text-white">Here you can familiarize yourself with the cost of subscriptions, services 
-									<br>and fill out the form at the end of the page to book the selected subscription.</p>
+							<div class="generic-banner-content ">
+								<h2 class="text-white text-uppercase">Оберіть абонемент B.u.B. Kyiv Hub</h2>
+								<p class="text-white">Тут ви можете ознайомитися з вартістю підписок, переліком послуг,
+									<br>та заповнити форму в кінці сторінки, щоб замовити обраний абонемент.</p>
 							</div>
 						</div>
 					</div>
@@ -63,55 +66,55 @@
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-60 col-lg-8">
-							<div class="title text-center">
-								<h2>ABOUT SUBSCRIPTIONS</h2>
+							<div class="title text-center text-uppercase">
+								<h2>Про абонементи</h2>
 							</div>
 						</div>
 					</div>							
 					<div class="container">
 						<div class="row d-flex justify-content-center text-center">
 							<div class="col-sm">
-								<h4 class="text-uppercase mb-30 mt-40">Monthly membership</h4>
+								<h4 class="text-uppercase mb-30 mt-40">Абонемент на місяць</h4>
 								<img src="img/monthly.png" width="270px" alt="Monthly membership card image">
-								<h5 class="mt-10 mb-20">10 $</h5>
+								<h5 class="mt-10 mb-20"><strong>10 $</strong><br><small><del class="text-white">ㅤ</del></small></h5>
 								<div>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">1 month</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">visiting the swimming pool</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">visiting gyms</p>
-									<p class="p-check"><img src="img/membersip_no.png" alt="" class="img-check">free coach services</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">free group training</p>
-									<p class="p-check"><img src="img/membersip_no.png" alt="" class="img-check">free bar drinks</p>
-									<p class="h6 mt-30">Good choise to start and <br>get used to the atmosphere.</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">1 місяць</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">доступ до залів</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">доступ до басейну</p>
+									<p class="p-check"><img src="img/membersip_no.png" alt="" class="img-check">включені групові тренування</p>
+									<p class="p-check"><img src="img/membersip_no.png" alt="" class="img-check">включені послуги тренера</p>
+									<p class="p-check"><img src="img/membersip_no.png" alt="" class="img-check">безліміт на напої в барі</p>
+									<p class="h6 mt-30">Гарний вибір для початківців, <br>щоб випробувати алгоритми занять.</p>
 									<p><hr></p>
 								</div>
 						  	</div>
 						  	<div class="col-sm">
-								<h4 class="text-uppercase mb-30 mt-40">Annual membership</h4>
+								<h4 class="text-uppercase mb-30 mt-40">Абонемент на рік</h4>
 								<img src="img/annual.png" width="270px" alt="Annual membership card image">
-								<h5 class="mt-10 mb-20">45 $</h5>
+								<h5 class="mt-10 mb-20"><strong>45 $</strong><br><small><del class="text-danger">120 $</del></small></h5>
 								<div>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">1 year</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">visiting the swimming pool</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">visiting gyms</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">free coach services</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">free group training</p>
-									<p class="p-check"><img src="img/membersip_no.png" alt="" class="img-check">free bar drinks</p>
-									<p class="h6 mt-30">An acceptable price for those <br>who value personal training.</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">1 рік</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">доступ до залів</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">доступ до басейну</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">включені групові тренування</p>
+									<p class="p-check"><img src="img/membersip_no.png" alt="" class="img-check">включені послуги тренера</p>
+									<p class="p-check"><img src="img/membersip_no.png" alt="" class="img-check">безліміт на напої в барі</p>
+									<p class="h6 mt-30">Прийнятна ціна для тих, хто відвідує <br>групові тренування.</p>
 									<p><hr></p>
 								</div>
 							</div>
 						  	<div class="col-sm">
-								<h4 class="text-uppercase mb-30 mt-40">Premium membership</h4>
+								<h4 class="text-uppercase mb-30 mt-40">Premium абоменент</h4>
 								<img src="img/premium.png" width="270px" alt="Premium membership card image">
-								<h5 class="mt-10 mb-20">60 $</h5>
+								<h5 class="mt-10 mb-20"><strong>60 $</strong><br><small><del class="text-danger">145 $</del></small></h5>
 								<div>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">1 year</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">visiting the swimming pool</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">visiting gyms</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">free coach services</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">free group training</p>
-									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">free bar drinks</p>
-									<p class="h6 mt-30">Includes all you need. <br>Without limits.</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">1 рік</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">доступ до залів</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">доступ до басейну</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">включені групові тренування</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">включені послуги тренера</p>
+									<p class="p-check"><img src="img/membersip_yes.png" alt="" class="img-check">безліміт на напої в барі</p>
+									<p class="h6 mt-30">Включає в себе все необхідне. <br>І навіть більше.</p>
 									<p><hr></p>
 								</div>
 							</div>
@@ -127,19 +130,19 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-50 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10 mt-10">Make a reservation</h1>
-								<p class="text-center">Fill out the form below so we can clarify all the details about booking a gym membership.</p>
+								<h1 class="mb-10 mt-10 text-uppercase">Забронювати абонемент</h1>
+								<p class="text-center">Заповніть форму нижче, щоб ми з'ясували час для зустрічі та всі деталі <br>перед заключенням договору про придбання абонемента.</p>
 							</div>
 						</div>
 					</div>										
 					<form class="form-area " id="myForm" action="mail.php" method="post" class="reservation-form text-right">
 						<div class="row">	
 							<div class="col-lg-6 form-group">
-								<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control rounded" required="" type="text">
+								<input name="name" placeholder="Ваше ім'я *" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control rounded" required="" type="text">
 							
-								<input name="tel" placeholder="Enter phone number" pattern="^\+[0-9]{1,3}\[0-9]{1,2}\[0-9]{1,3}\[0-9]{1,2}\[0-9]{1,2}\$" onfocus="this.placeholder = '+380961231232'" onblur="this.placeholder = 'Enter phone number'" class="common-input mb-20 form-control rounded" required="" type="tel">
+								<input name="tel" placeholder="Введіть номер телефону *" pattern="^\+[0-9]{1,3}\[0-9]{1,2}\[0-9]{1,3}\[0-9]{1,2}\[0-9]{1,2}\$" onfocus="this.placeholder = '+380961231232'" onblur="this.placeholder = 'Enter phone number'" class="common-input mb-20 form-control rounded" required="" type="tel">
 								
-								<input class="common-input mb-20 form-control rounded" required="" list="datalistOptions" id="exampleDataList" placeholder="Type of gym membership card" type="datalist" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Type of gym membership card'">
+								<input class="common-input mb-20 form-control rounded" required="" list="datalistOptions" id="exampleDataList" placeholder="Оберіть тип абонемента *" type="datalist" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Type of gym membership card'">
 								<datalist id="datalistOptions">
 								<option value="🔵 Monthly">
 								<option value="🟠 Annual">
@@ -147,12 +150,12 @@
 								</datalist>
 
 								<div>
-									<p><sup>*After clarifying the details, we will invite you to the sales department to complete the purchase.<br>The sales department is located in the sports club.</sup></p>
+									<p><sup>* Після уточнення всіх деталей, ми запросимо вас до відділу продажів для завершення покупки.<br>Відділ продажів знаходиться у наших спортивних клубах.</sup></p>
 								</div>
 							</div>
 							<div class="col-lg-6 form-group">
-								<textarea class="common-textarea mt-10 form-control rounded" name="message" placeholder="Message" onfocus="this.placeholder = 'Here you can specify a convenient time for the call as well as ask questions.'" onblur="this.placeholder = 'Message'" required=""></textarea>
-								<button class="primary-btn mt-20" onclick="window.open('index.html')">Reserve<span class="lnr lnr-arrow-right"></span></button>
+								<textarea class="common-textarea mt-10 form-control rounded" name="message" placeholder="Повідомлення" onfocus="this.placeholder = 'Here you can specify a convenient time for the call as well as ask questions.'" onblur="this.placeholder = 'Message'" required=""></textarea>
+								<button class="primary-btn mt-20" onclick="window.open('index.html')">Забронювати<span class="lnr lnr-arrow-right"></span></button>
 								<div class="alert-msg">								
 							</div>
 							</div>
@@ -168,9 +171,9 @@
 					<div class="row">
 						<div class="col-lg-5 col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<h6>Links</h6>
+								<h6>Посилання</h6>
 								<p>
-									<a href="elements.html">Club cards</a>
+									<a href="elements.html">Абонементи</a>
 								</p>
 								<p>
 									<a href="#faq">FAQ</a>
@@ -180,37 +183,24 @@
 						</div>
 						<div class="col-lg-5  col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<h6>Newsletter</h6>
-								<p>Stay update with our latest</p>
-								<div class="" id="mc_embed_signup">
-									<form target="_blank" novalidate="true" action="" method="get" class="form-inline">
-										<div class="d-flex flex-row">
-											<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-				                            	<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-				                            	<div style="position: absolute; left: -5000px;">
-													<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-												</div>
-										</div>		
-										<div class="info"></div>
-									</form>
-								</div>
+								<h6>Є питання?</h6>
 								<div class="mt-20 call-btn">
-									<p>Call us Telegram if you have<br>an urgent question</p>
+									<p>Зателефонуйте нам у Telegram,<br>якщо у вас є термінове питання</p>
 									<button type="button" class="btn btn-outline-secondary"
-									onclick="window.open('https://t.me/dembytska','_blank')">
+										onclick="window.open('https://t.me/dembytska','_blank')">
 										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 										class="bi bi-telephone" viewBox="0 0 16 16">
 										<path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"></path>
 										</svg>
-										Call us
-									  </button>
+										Зателефонувати
+									</button>
 								</div>
 							</div>
 						</div>						
 						<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
 							<div class="single-footer-widget">
-								<h6>Follow Us</h6>
-								<p>Let us be social</p>
+								<h6>Слідкуйте за нами</h6>
+								<p>Ми у соцмережах</p>
 								<div class="footer-social d-flex align-items-center">
 									<a href="https://www.facebook.com/dembytska/" target="_blank"><i class="fa fa-facebook"></i></a>
 									<a href="https://www.instagram.com/dembytska.a/" target="_blank"><i class="fa fa-instagram"></i></a>
@@ -218,7 +208,7 @@
 									<a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a>
 								</div>
 							</div>
-						</div>							
+						</div>
 					</div>
 				</div>
 			</footer>	
