--- a/elements.html
+++ b/elements.html
@@ -168,7 +168,7 @@
 								onfocus="this.placeholder = 'Тут ви можете вказати зручний час для дзвінка, а також задати питання.'"
 								onblur="this.placeholder = 'Повідомлення'"></textarea>
 
-								<button class="primary-btn mt-20 section__button2" id="btnRun"
+								<button class="primary-btn mt-20 section__button2 genric-btn primary" id="btnRun"
 									onClick="run(); return false;">Забронювати<span
 										class="lnr lnr-arrow-right"></span></button>
 								<div class="alert-msg">
