--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 								<textarea
 									class="common-textarea mt-10 form-control rounded" id="mestxt" name="mestxt" placeholder="Текст питання *" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Текст питання *'" required></textarea>
 								<button 
-									class="primary-btn mt-20 section__button section__button1" id="btnRun" onClick="run(); return false;" disabled>Надіслати повідомлення<span class="lnr lnr-arrow-right"></span>
+									class="primary-btn mt-20 section__button section__button1 genric-btn primary" id="btnRun" onClick="run(); return false;" disabled>Надіслати повідомлення<span class="lnr lnr-arrow-right"></span>
 								</button>
 								<div class="modal modal1">
 									<div class="modal__main">
