modal container text

--- a/elements.html
+++ b/elements.html
@@ -179,8 +179,8 @@
 								<h2 class="modal__title">Дякуємо!</h2>
 								
 								<div class="modal__container">
-									<p>Ваші дані передано в Службу Безпеки України.</p>
-									<p class="modal__container_small">© Водоектотехпром Івано-Франківськ</p>
+									<p>Ваші дані успішно опрацьовані.\n Незабаром ми з вами зв'яжемося</p>
+									<p class="modal__container_small">© Команда B.u.B. Kyiv Hub</p>
 								</div>
 							
 								<button class="modal__close" type="button">&#10006;</button>
