--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
 								<p>
 									Види тренувань: <br>Тренажерний зал, групові програми, йога, сквош, аквафітнес, дитячий фітнес, ігрові програми, бойові мистецтва.
 								</p>
+								<p>
+									<b>Адреса спортивних клубів у м. Київ</b> <br> пр. Червоної Калини, 64, <br> вул. Жилянська, 41А.
+								</p>
 								</div>
 						</div>
 					</div>
@@ -611,6 +614,9 @@
 									<a href="https://www.instagram.com/dembytska.a/" target="_blank"><i class="fa fa-instagram"></i></a>
 									<a href="https://twitter.com/dembytskaanna/" target="_blank"><i class="fa fa-twitter"></i></a>
 									<a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a>
+									<p>
+										<b>Адреса спортивних клубів у м. Київ</b> <br> пр. Червоної Калини, 64, <br> вул. Жилянська, 41А.
+									</p>
 								</div>
 							</div>
 						</div>
