adress in footer edit

--- a/index.html
+++ b/index.html
@@ -586,7 +586,8 @@
 								<p>
 									<a href="#faq">FAQ</a>
 								</p>
-            					<p class="footer-text">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
+								<h6><br><br>Адреса спортивних клубів</h6>
+									<p>м. Київ, пр. Червоної Калини, 64, <br> вул. Жилянська, 41А.</p>
 							</div>
 						</div>
 						<div class="col-lg-5  col-md-6 col-sm-6">
@@ -602,6 +603,7 @@
 										</svg>
 										Зателефонувати
 									</button>
+									<p class="footer-text">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
 								</div>
 							</div>
 						</div>						
@@ -615,7 +617,7 @@
 									<a href="https://twitter.com/dembytskaanna/" target="_blank"><i class="fa fa-twitter"></i></a>
 									<a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a>
 								</div>
-								<p><b>Адреса спортивних клубів у м. Київ</b> <br> пр. Червоної Калини, 64, <br> вул. Жилянська, 41А.</p>
+
 							</div>
 						</div>
 					</div>
