--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 										</svg>
 										Зателефонувати
 									</button>
-									<p class="footer-text"><br>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
+									<p class="footer-text"><br><br><br><br>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
 								</div>
 							</div>
 						</div>						
