--- a/elements.html
+++ b/elements.html
@@ -203,9 +203,10 @@
 									<a href="elements.html">Абонементи</a>
 								</p>
 								<p>
-									<a href="#faq">FAQ</a>
+									<a href="index.html#faq">FAQ</a>
 								</p>
-            					<p class="footer-text">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
+								<h6><br><br>Адреса спортивних клубів</h6>
+									<p>м. Київ, пр. Червоної Калини, 64, <br> вул. Жилянська, 41А.</p>
 							</div>
 						</div>
 						<div class="col-lg-5  col-md-6 col-sm-6">
@@ -221,6 +222,7 @@
 										</svg>
 										Зателефонувати
 									</button>
+									<p class="footer-text"><br><br><br><br>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
 								</div>
 							</div>
 						</div>						
@@ -234,6 +236,7 @@
 									<a href="https://twitter.com/dembytskaanna/" target="_blank"><i class="fa fa-twitter"></i></a>
 									<a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a>
 								</div>
+
 							</div>
 						</div>
 					</div>
